plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'me.modmuss50.mod-publish-plugin' version '1.1.0'
}

version = "${minecraft_version}-${project.mod_version}"
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neoforge_full_version

    runs {
        configureEach {
            logLevel = org.slf4j.event.Level.DEBUG
        }

        client {
            client()
        }

        server {
            server()
            programArguments.add('--nogui')
        }

        clientData {
            clientData()
            programArguments.addAll('--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').absolutePath,
                '--existing', file('src/main/resources/').absolutePath)
        }
    }

    mods {
        "${project.mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven {
        name = "Jared's Maven"
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "mezz.jei"
        }
    }

    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }

    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name = "FTB"
        url = "https://maven.ftb.dev/snapshots"
        content {
            includeGroup "dev.ftb.mods"
        }
    }
}

dependencies {
    // JEI - wired up for Phase 6 integration; safe to leave as compileOnly until then
    compileOnly("mezz.jei:jei-26.1.2-neoforge-api:29.5.0.26")
    runtimeOnly("mezz.jei:jei-26.1.2-neoforge:29.5.0.26")

    // Jade - block-info tooltips. Compile against the CurseForge jar; same coordinates as
    // the auroral reference project.
    implementation("curse.maven:jade-324717:7817285")

    implementation("dev.ftb.mods:ftb-materials:26.1.2.1-SNAPSHOT")

    // GuideME - In-game guidebook (optional)
    implementation("org.appliedenergistics:guideme:${guideme_version}")
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            neoforge_loader_version: neoforge_loader_version,
            neoforge_full_version  : neoforge_full_version,
            version                : version,
            neo_version_range      : neo_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_author             : mod_author
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishMods {
    file = jar.archiveFile
    changelog = "Release ${version}"
    type = BETA
    modLoaders.add("neoforge")

    curseforge {
        projectId = project.curseforge_id
        projectSlug = "ftb-industrial-contraptions"
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        minecraftVersions.add(minecraft_version)
        optional("jei", "jade", "guideme")
    }
}
